melhorias de codigo recomendadas pelo sonarcloud e novos testes unitarios